--- a/index.html
+++ b/index.html
@@ -1,96 +1,40 @@
+
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script defer src="/_vercel/insights/script.js"></script>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@exampledev/new.css@1.1.2/new.min.css"
-    />
-    <title>Vercel HTML Starter</title>
-    <meta
-      name="description"
-      content="High-performance HTML based website template."
-    />
-  </head>
-  <body>
-    <h1>Vercel HTML Starter</h1>
-    <p>
-      This template is a simple, but powerful single
-      <code>index.html</code> file deployed to
-      <a href="https://vercel.com">Vercel</a>. When your site is deployed, all
-      static assets (like HTML, JavaScript, CSS, images, and more) are deployed
-      globally to every
-      <a href="https://vercel.com/docs/concepts/edge-network/overview"
-        >Vercel Edge Network</a
-      >
-      region.
-    </p>
-    <h2>Simple, privacy-friendly analytics</h2>
-    <p>
-      Want to understand your visitor traffic? Vercel Analytics gives you
-      first-party, privacy-friendly traffic analytics for your HTML site. This
-      template is already configured using the following script:
-    </p>
-    <pre><code>&lt;script defer src="/_vercel/insights/script.js"&gt;&lt;/script&gt;</code></pre>
-    <p>
-      Learn more about
-      <a href="https://vercel.com/analytics">Vercel Analytics</a>.
-    </p>
-    <h2>Integrated with git</h2>
-    <p>
-      Deploying updates to your site is as simple as
-      <code>git push</code> thanks to Vercel's advanced
-      <a href="https://vercel.com/docs/concepts/git">Git Integration</a>.
-      Support for GitHub, GitLab, Bitbucket is zero-configuration, and with the
-      flexible Vercel CLI and API, you can integrate with any tool possible.
-    </p>
-    <p>
-      Learn more about
-      <a href="https://vercel.com/docs/concepts/git">Git Integration</a>.
-    </p>
-    <h2>Fast <code>gzip</code> compression</h2>
-    <p>
-      To help ensure the smallest possible file sizes for your static assets,
-      the Vercel Edge Network compresses files by default using
-      <code>gzip</code>. You can also optionally use
-      <code>brotli</code> compressesion if you prefer.
-    </p>
-    <p>
-      Learn more about
-      <a href="https://vercel.com/docs/concepts/edge-network/compression"
-        >compression</a
-      >.
-    </p>
-    <h2>Advanced routing configuration</h2>
-    <p>
-      Vercel gives you a variety of ways to configure the routing of your
-      website. For example, adding redirects, rewrites, or headers to your page.
-      While you can use <code>vercel.json</code> to define these through JSON,
-      you can also express your routing configuration as code using
-      <a href="https://vercel.com/docs/concepts/functions/edge-middleware"
-        >Vercel Edge Middleware</a
-      >.
-    </p>
-    <p>
-      Middleware runs before the
-      <a href="https://vercel.com/docs/concepts/edge-network/caching"
-        >Vercel Edge Network Cache</a
-      >, so you can configure routing exactly as your application needs. For
-      example, this template uses <code>middleware.js</code> defined in the root
-      of the repository to add additional security headers to the site:
-    </p>
-    <pre><code>referrer-policy: origin-when-cross-origin
-strict-transport-security: max-age=31536000; includeSubDomains; preload
-x-content-type-options: nosniff
-x-dns-prefetch-control: on
-x-frame-options: DENY</code></pre>
-    <p>
-      Learn more about
-      <a href="https://vercel.com/docs/concepts/functions/edge-middleware"
-        >Vercel Edge Middleware</a
-      >.
-    </p>
-  </body>
+<html lang="es">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Framework del Caos™</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <section class="hero">
+    <h1>¿Cómo hackear el algoritmo de YouTube y lograr 12.7 millones de vistas con solo $200, Wi-Fi y un cerebro ligeramente quemado?</h1>
+    <p>+48,456 seguidores. De $12.84 en dos meses a $1,438 en solo 27 días.</p>
+    <a href="#" class="cta-button">Sí, quiero el Framework del Caos™ por $19.97</a>
+  </section>
+  <section class="features">
+    <h2>Lo que vas a aprender</h2>
+    <ul>
+      <li>Ver llegar cientos (o miles) de nuevos seguidores cada día, de forma predecible y en piloto automático.</li>
+      <li>Crear videos en solo 3 horas que explotan semanas o meses después.</li>
+      <li>Monetizar contenido que sigue trabajando por ti 24/7.</li>
+      <li>Diseñar tu propia máquina de atención + ingresos.</li>
+    </ul>
+  </section>
+  <section class="casos">
+    <h2>Casos Reales</h2>
+    <p>Andrés: de 0 seguidores a $49,564 en 30 días</p>
+    <p>Laura: de 3,467 vistas a 12.7 millones en 34 días</p>
+    <p>Felipe: de $12.84 a $1,438 en 27 días</p>
+  </section>
+  <section class="precio">
+    <h2>Solo $19.97</h2>
+    <p>Sin membresías. Sin promesas vacías. Solo el sistema que ya está funcionando.</p>
+    <a href="#" class="cta-button">Acceder ahora al Framework del Caos™</a>
+  </section>
+  <footer>
+    <p>Puedes seguir creando contenido que nadie ve... o empezar a construir tu propio sistema de atención, ingresos y libertad creativa. Haz clic ahora. Porque el Wi-Fi no dura para siempre.</p>
+  </footer>
+</body>
 </html>
